# faceRecognition

./: CMakeLists.txt  README  README.md  err  facePro.cpp  opencv  res  run.sh
data/: lda.in  list  m.sh
depends/: eigen3.rar
depends/stasm/: CMakeLists.txt  LICENSE  STASMConfig.cmake.in
depends/stasm/STASM_DIR/: README.md
depends/stasm/apps/: README.txt  appmem.cpp  linsolve.h  minimal2.cpp  stasm_main.cpp  test_stasm_lib_err.cpp
depends/stasm/data/: README.txt
depends/stasm/doc/: HISTORY.txt
depends/stasm/mingw/: Makefile  make.bat  make_minimal.bat
depends/stasm/stasm/: asm.h  convshape.h  eyedet.cpp  eyedet.h  eyedist.cpp  faceroi.cpp  faceroi.h  hatdesc.cpp  hatdesc.h  landmarks.h  misc.cpp  pinstart.h  print.cpp  print.h  shape17.h  (+6 more)
include/: paecvutils.hpp  pael.h  paeltemplate.hpp
model/: MatchProbability  similar
model/pca296/: pca0  pca1  pca10  pca100  pca101  pca102  pca103  pca104  pca105  pca106  pca107  pca108  pca109  pca11  pca110  pca111  pca112  pca113  pca114  pca115  pca116  pca117  pca118  pca119  pca12  pca120  pca121  pca122  pca123  pca124  pca125  pca126  pca127  pca128  pca129  pca13  pca130  pca131  pca132  pca133  (+256 more)
src/: FaceCompare.cpp  FaceCompare.h  FaceDetect.cpp  FaceDetect.h  FacePreProcess.cpp  FacePreProcess.h  FaceRecognition.cpp  FaceRecognition.h  FaceRect.h  FaceToDemo.cpp  FaceToDemo.h  Serialization.h  Unified.h  base.h  cvtool.cpp  cvtool.h  eigenheader.h  imgproc.cpp  imgproc.h  lbp.cpp  lbp.h  lbpCompute.cpp  lbpCompute.h  lda.cpp  lda.h  mathhelper.h  misc.cpp  misc.h  pca.cpp  pca.h  sift.cpp  sift.h
(+445 files in other folders)
